# alfred-granted-workflow

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  release-please-config.json
.github/workflows/: ci.yml  release-please.yml
docs/: architecture.md  development.md  release.md
scripts/: build.sh  deploy.sh  icon.sh
src/: alfred.rs  console.rs  frecency.rs  lib.rs  main.rs  profiles.rs  runner.rs  services.rs
tests/: alfred_test.rs  console_test.rs  frecency_test.rs  profiles_test.rs  services_test.rs
tests/common/: mod.rs
workflow/: info.plist
